--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <a href="" class="logo">Portfólio</a>
+
+        <i class='bx bx-menu' id="menu-icon" ></i>
+
+        <nav class="navbar">
+            <a href="#home" style="--i:1;" class="active">Home</a>
+            <a href="#about" style="--i:2;">About</a>
+            <a href="#skills" style="--i:3;">Skills</a>
+            <a href="#portfolio" style="--i:4;">Portifolio</a>
+            <a href="#contact" style="--i:5;">Contact</a>
+        </nav>
+    </header>
     <section class="content-pro">
         <h2 class="title-pro">Projetos</h2>
        
@@ -68,7 +81,7 @@
 
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="script.js"></script>
+        <script src="./js/script.js"></script>
 
 
     </section>
