--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="./js/script.js"></script>
+        <script src="./js/animation.js"></script>
 
 
     </section>
@@ -89,7 +90,7 @@
 </html>
 
 
-que ao clicar no  id="toggleButton1" mostre um conteudo especifico do card-projetos no caso  id="hiddenContent1" , ja id="toggleButton2" mostre o conteudo do id="hiddenContent2", deixando o conteudo mostrado em dispaly flex 
+
 
 
 <!-- talo Decanio
