criando a home de apresentação

--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
             <a href="#contact" style="--i:5;">Contact</a>
         </nav>
     </header>
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Osmar Mendes</h1>
+            <h3>And I'm a <span class="dynamic-text"></span></h3>
+            <p> I am looking for my first job opportunity. My dream is to one day work with AI and Machine Learning.I'm currently studying Full Stack Python</p>
+
+            <div class="social-media">
+                <a href="" style="--i:6;"><i class='bx bxl-whatsapp'></i></a>
+                <a href="" style="--i:7;"><i class='bx bxl-instagram'></i></a>
+                <a href="" style="--i:8;"><i class='bx bxl-linkedin'></i></a>
+                <a href="" style="--i:9;"><i class='bx bx-envelope'></i></a>
+                <a href="" style="--i:10;"><i class='bx bxl-github'></i></a>
+            </div>
+
+            <a href="" class="btn">Download CV</a>
+
+        </div>
+        
+        <div class="home-img">
+            <img src="./assets/img/home.jpeg" alt="">
+        </div>
+    </section>
     <section class="content-pro">
         <h2 class="title-pro">Projetos</h2>
        
