--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
 
         <div class="about-skill" id="Skills">
             <h2 class="skill-title">Skills</h2>
-            <div class="cards">
+
+            <div class="wrapper">
+                <div class="item item1"></div>
+                <div class="item item2"></div>
+                <div class="item item3"></div>
+                <div class="item item4"></div>
+                <div class="item item5"></div>
+                <div class="item item6"></div>
+                <div class="item item7"></div>
+                <div class="item item8"></div>
+                <div class="item item9"></div>
+                <div class="item item10"></div>
+            </div>
+            <!-- <div class="cards">
                 <div class="box">
                     <div class="wrapper">
                         <img src="./assets/icons8-html-5-100 (1).png" class="cover-image" />
@@ -79,7 +92,7 @@
                         <img src="./assets/icons8-javascript-100.png" class="cover-image" />
                     </div>
                     <img src="./assets/file_type_light_js_icon_130458.png" class="character" />
-                </div>
+                </div> -->
                 
                 
                     <!-- <div class="box">
