--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
         <div class="about-skill" id="Skills">
             <h2 class="skill-title">Skills</h2>
 
-            <div class="wrapper">
-                <div class="item item1"></div>
-                <div class="item item2"></div>
-                <div class="item item3"></div>
-                <div class="item item4"></div>
-                <div class="item item5"></div>
-                <div class="item item6"></div>
-                <div class="item item7"></div>
-                <div class="item item8"></div>
-                <div class="item item9"></div>
-                <div class="item item10"></div>
-            </div>
+            <div class="scroller" data-speed="fast">
+                <ul class="tag-list scroller__inner">
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JS</li>
+                  <li>SSG</li>
+                  <li>webdev</li>
+                  <li>animation</li>
+                  <li>UI/UX</li>
+                </ul>
+              </div>
             <!-- <div class="cards">
                 <div class="box">
                     <div class="wrapper">
