ajuste de imagens e codigo das skills

--- a/index.html
+++ b/index.html
@@ -70,13 +70,45 @@
 
             <div class="scroller" data-speed="fast">
                 <ul class="tag-list scroller__inner">
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>JS</li>
-                  <li>SSG</li>
-                  <li>webdev</li>
-                  <li>animation</li>
-                  <li>UI/UX</li>
+                  <li>
+                    <img src="./assets/mini-languages/html.svg" alt="html">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/css.svg" alt="css">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/javascript.svg" alt="javascript">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/figma.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/sass.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/php.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/python.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/laravel.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/mysql.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/git.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/django.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/node.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="./assets/mini-languages/react.svg" alt="">
+                  </li>
                 </ul>
               </div>
             <!-- <div class="cards">
