ajuste modal about

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <li>Prestava suporte administrativo à repartição, gerenciando documentos, organizando arquivos e auxiliando na manutenção da eficiência operacional do departamento.</li>
                 </ul>
                 
-                <h2>Habilidades Técnicas</h2>
+                <!-- <h2>Habilidades Técnicas</h2>
                 <div class="skill">
                     <div class="liguagem">
                         <h3>Linguagens de Programação:</h3>
@@ -189,7 +189,7 @@
                         </ul>
                     </div>
                 </div>
-                
+                 -->
 
                 <h2>Idiomas</h2>
                 <ul>
