--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
         <div class="home-img">
-            <img src="./assets/img/home.jpeg" alt="">
+            <img src="./assets/img/osmar.jpg" alt="">
         </div>
     </section>
 
@@ -53,7 +53,7 @@
 
         <div class="about-content">
             <div class="about-img">
-                <img src="https://media.giphy.com/media/8usSgvbCkB8AkoTYQv/giphy.gif" alt="">
+                <img src="assets/img/trabalhando.png" alt="">
             </div>
 
             <div class="about-content-text">
