ajuste links sociais

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="social-media">
                 <a href="" style="--i:6;"><i class='bx bxl-whatsapp'></i></a>
                 <a href="" style="--i:7;"><i class='bx bxl-instagram'></i></a>
-                <a href="" style="--i:8;"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/osmar-mendescn/"  target="_blank" style="--i:8;"><i class='bx bxl-linkedin'></i></a>
                 <a href="" style="--i:9;"><i class='bx bx-envelope'></i></a>
-                <a href="" style="--i:10;"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/osmarmcn" target="_blank" style="--i:10;"><i class='bx bxl-github'></i></a>
             </div>
 
             <a href="" class="btn">Download CV</a>
@@ -59,12 +59,11 @@
             <div class="about-content-text">
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3>Full Stack</h3>
-                <p>Olá, me chamo Osmar Mendes e sou estudante da área de TI, atuando como desenvolvedor Full Stack. Venho de uma transição de carreira da área jurídica, o que me permitiu desenvolver um olhar analítico e detalhista, que aplico na criação de soluções tecnológicas. Há 2 anos, tenho me dedicado ao desenvolvimento de aplicações web e automação, sempre buscando aperfeiçoar e expandir meus conhecimentos através de projetos práticos e estudos contínuos.
+                <p>Olá, me chamo Osmar Mendes sou estudante da área de TI, atuando como desenvolvedor Full Stack. Venho de uma transição de carreira da área jurídica, o que me permitiu desenvolver um olhar analítico e detalhista, que aplico na criação de soluções tecnológicas. Há 2 anos, tenho me dedicado ao desenvolvimento de aplicações web e automação, sempre buscando aperfeiçoar e expandir meus conhecimentos através de projetos práticos e estudos contínuos.
                 </p>
-                <p>Minha principal experiência é com as linguagens Python e JavaScript, nas quais desenvolvo tanto o back-end quanto o front-end de aplicações. Estou sempre empenhado em criar projetos mais robustos e eficientes, com o objetivo de agregar valor e inovação às soluções que desenvolvo.</p>
+                <p>Minhas principais experiências é com as linguagens Python e JavaScript, nas quais desenvolvo tanto o back-end quanto o front-end nas aplicações. Estou sempre empenhado em criar projetos mais robustos e eficientes, com o objetivo de agregar valor e inovação às soluções que desenvolvo.</p>
 
                 <button id="btn-about" class="btn-about">Read More</button>
-                <a href="#" ></a>
             </div>
             
         </div>
