--- a/index.html
+++ b/index.html
@@ -44,8 +44,16 @@
         </div>
         
         <div class="home-img">
-            <img src="./assets/img/osmar.jpg" alt="">
+            <span class="borderline"></span>
+            <div class="img-efect">
+                <div class="home-img-box">
+                    <div class="box-img">
+                        <img src="./assets/img/osmar.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
+        
     </section>
 
     <section class="about" id="about">
