--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo">Portfólio</a>
+        <a href="" class="logo">
+            <img src="assets/img/file.svg" alt="">
+        </a>
 
         <i class='bx bx-menu' id="menu-icon" ></i>
 
