--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="header">
         <div class="img-log">
-            <a href="" class="logo">
-                <img src="assets/img/" alt="">
+            <a href=""#home" class="logo">
+                <img src="assets/img/logo-osmar.svg" alt="">
             </a>
         </div>
        
