--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
         <div class="navigation">
             <ul>
                 <li class="list active">
+                    <button id="toggleButtonAll" class="toggleButton" type="button">
+                        <span class="icon"><ion-icon name="apps-outline"></ion-icon></span>
+                        <span class="text">Geral</span>
+                        <span class="circle"></span>
+                    </button>
+                </li>
+                <li class="list ">
                     <button id="toggleButtonJs" class="toggleButton" type="button">
                         <span class="icon"><ion-icon name="logo-javascript"></ion-icon></span>
                         <span class="text">JS</span>
