--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             </a>
         </div>
        
-
-        <i class='bx bx-menu' id="menu-icon" ></i>
+        <ion-icon name="menu-outline" id="menu-icon"></ion-icon>
 
         <nav class="navbar">
             <a href="#home" style="--i:1;" class="active-btn">Home</a>
@@ -423,7 +422,7 @@
                         <input type="text" name="" placeholder="sobrenome" required>
                         <input type="text" name="" placeholder="email" required>
                         <input type="text" name="" placeholder="telefone" required>
-                        <textarea name="" id="" placeholder="Sua mensagem"></textarea>
+                        <textarea name="" id="" placeholder="Sua mensagem" rows="8"></textarea>
                         
                     </div>
 
