responsive header and home

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
        
         <ion-icon name="menu-outline" id="menu-icon"></ion-icon>
+        <ion-icon name="close-outline" id="close-icon"></ion-icon>
 
         <nav class="navbar">
             <a href="#home" style="--i:1;" class="active-btn">Home</a>
